--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,21 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
-  
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "baseUrl":".",
-    "paths": {
-      "@/*": ["./src/*"],
-      "@components/*": ["src/components/*"],
-      "@assets/*": ["src/assets/*"]
-    },
-  },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
-}
+   "target": "ESNext",
+   "useDefineForClassFields": true,
+   "module": "ESNext",
+   "lib": ["ESNext", "DOM"],
+   "moduleResolution": "Node",
+   "strict": true,
+   "sourceMap": true,
+   "resolveJsonModule": true,
+   "isolatedModules": true,
+   "esModuleInterop": true,
+   "noEmit": true,
+   "noUnusedLocals": true,
+   "noUnusedParameters": true,
+   "noImplicitReturns": false,
+   "skipLibCheck": true,
+   "baseUrl": "."
+  }
+ }
